tests/ui/any/hrtb2.old.stderr
error[E0080]: evaluation panicked: called `Option::unwrap()` on a `None` value
  --> $DIR/hrtb2.rs:14:25
   |
LL |     let _dy: &dyn Bar = try_as_dyn(&x).unwrap();
   |                         ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
